--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "next lint && prettier --check --ignore-path .gitignore --ignore-path .prettierignore .",
-    "format:fix": "next lint --fix && prettier --write --ignore-path .gitignore --ignore-path .prettierignore ."
+    "format:fix": "next lint --fix && prettier --write --ignore-path .gitignore --ignore-path .prettierignore .",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "14.0.4",
@@ -31,13 +32,14 @@
     "eslint": "8",
     "eslint-config-alloy": "5.1.2",
     "eslint-config-next": "14.0.4",
+    "husky": "^9.0.11",
     "lodash": "4.17.21",
     "mongodb": "5.0.0",
     "next-auth": "4.24.5",
     "nodemailer": "6.9.8",
     "prettier": "3.2.4",
     "server-only": "0.0.1",
-    "socket.io": "^4.7.4",
+    "socket.io": "4.7.5",
     "typescript": "5",
     "uuid": "9.0.1"
   }
