--- a/.env.public
+++ b/.env.public
@@ -8,8 +8,9 @@
 # @@@ WARNING: DON'T ADD NEXT_PUBLIC_* VARIABLES IF THEY'RE PRIVATE @@@
 
 # env specific
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_SECRET=random-string
+NEXTAUTH_URL=http://localhost:3000/api/auth
+API_HOST=http://localhost:3001
 
 # context specific
 GITHUB_ID=
@@ -37,16 +38,6 @@ MONGODB_DATABASE=
 MONGODB_USERS_DATABASE=
 MONGODB_ORGS_DATABASE=
 MONGODB_DEFAULT_ORG=
-
-# ----------------
-# PUBLIC VARIABLES 
-# @@@ WARNING: THESE APPEAR IN THE BROWSER OF EVERY VISITOR @@@
-
-# base path: client (browser)
-NEXT_PUBLIC_NEXUS_BASE_PATH=
-NEXT_PUBLIC_NEXUS_NAME=
-NEXT_PUBLIC_NEXUS_LOGO_PATH=
-NEXT_PUBLIC_NEXUS_DEFAULT_IMAGE_PATH=
 
 # config
 ENABLE_LOG=true
