--- a/.env.public
+++ b/.env.public
@@ -9,8 +9,8 @@
 
 # env specific
 NEXTAUTH_SECRET=random-string
-NEXTAUTH_URL=http://localhost:3000/api/auth
-API_HOST=http://localhost:3001
+NEXTAUTH_URL=http://localhost:3001
+MAIN_URL=http://localhost:3000
 
 # context specific
 GITHUB_ID=
