--- a/.env.public
+++ b/.env.public
@@ -17,6 +17,8 @@ GITHUB_ID=
 GITHUB_SECRET=
 INSTAGRAM_CLIENT_ID=
 INSTAGRAM_CLIENT_SECRET=
+APPLE_CLIENT_ID=
+APPLE_CLIENT_SECRET=
 
 # env agnostic/specific: depends on your setup
 EMAIL_SERVER=
