--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "next": "^14.2.5",
     "react": "18",
     "react-dom": "18"
   },
@@ -34,9 +34,9 @@
     "eslint-config-next": "14.0.4",
     "husky": "^9.0.11",
     "lodash": "4.17.21",
-    "mongodb": "5.0.0",
+    "mongodb": "^5.9.2",
     "next-auth": "4.24.5",
-    "nodemailer": "6.9.8",
+    "nodemailer": "^6.9.14",
     "prettier": "3.2.4",
     "server-only": "0.0.1",
     "socket.io": "4.7.5",
