--- a/.env.public
+++ b/.env.public
@@ -1,48 +1,6 @@
-# .env.local.public
-# please copy and fill this to .env.local
+# .env.public
+# please copy and fill this to .env
 # or add it to you ci environment
 
-
-# ----------------
-# PRIVATE VARIABLES 
-# @@@ WARNING: DON'T ADD NEXT_PUBLIC_* VARIABLES IF THEY'RE PRIVATE @@@
-
-# env specific
-NEXTAUTH_SECRET=random-string
-NEXTAUTH_URL=http://localhost:3001
-MAIN_URL=http://localhost:3000
-
-# context specific
-GITHUB_ID=
-GITHUB_SECRET=
-INSTAGRAM_CLIENT_ID=
-INSTAGRAM_CLIENT_SECRET=
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
-APPLE_CLIENT_ID=
-APPLE_CLIENT_SECRET=
-
-# env agnostic/specific: depends on your setup
-EMAIL_SERVER=
-EMAIL_FROM=
-
-# modes: "full" (feats: enable-multi-tenancy,;)
-NEXUS_MODE=
-
-# base path: server-only
-NEXUS_BASE_PATH=
-
-# env agnostic
-MONGODB_URI=
-
-# default db
-MONGODB_DATABASE=
-
-# optional dbs (if used, all must be filled)
-MONGODB_USERS_DATABASE=
-MONGODB_ORGS_DATABASE=
-MONGODB_DEFAULT_ORG=
-
-# config
-ENABLE_LOG=true
-LOG_DEPTH=1
+MONGODB_PRIVATE_URI=""
+MONGODB_PUBLIC_URI=""
