--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,7 +59,7 @@
     "maxOldSpaceSize": 8196,
     "experimentalSpecifierResolution": "node",
     "transpileOnly": true,
-    "esm": true
+    "esm": true,
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules", "**/nsx/**/*", "**/system/**/*", "**/mock/**/*"],
