--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nodemailer": "^6.9.8",
     "prettier": "^3.2.4",
     "prisma": "^5.14.0",
+    "socket.io": "4.7.5",
     "server-only": "^0.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5",
