[DPCP-13] [DPCP-14] ar(feat) 2024 2nd semester rebase. (#3)
* ar(feat) 2024 2nd semester rebase.

* ar(feat) 2024 2nd semester rebase.

* ar(feat) 2024 2nd semester rebase.

* ar(feat) 2024 2nd semester rebase.

* ar(feat) 2024 2nd semester rebase.

* ar(feat) 2024 2nd semester rebase.

* ar(feat) DPCP-13: Valid Schema

* ar(feat) DPCP-13: Get seed to work

* ar(feat) DPCP-13: Get seed to work

* ar(feat) DPCP-13: Get seed to work

* ar(feat) DPCP-13: Get seed to work

* ar(feat) fix lock

* ar(feat) lint

* ar(feat) re-add socket

* ar(feat) sort it

* ar(feat) sort it

--- a/package.json
+++ b/package.json
@@ -1,46 +1,62 @@
 {
   "name": "@dreampipcom/hypnos",
+  "description": "DreamPip's Serverless Micro-services Hub.",
   "version": "1.0.0",
   "private": true,
   "author": "Angelo Reale",
   "license": "HPL3-ECO-AND-ANC",
   "scripts": {
-    "dev:schema": "NEXUS_SCHEMA=true next dev",
+    "schema:private:push": "npx prisma db push --schema prisma/schema-private.prisma",
+    "schema:private:pull": "npx prisma db pull --schema prisma/schema-private.prisma",
+    "schema:public:push": "npx prisma db push --schema prisma/schema-public.prisma",
+    "schema:public:pull": "npx prisma db pull --schema prisma/schema-public.prisma",
+    "schema:all:push": "npm run schema:private:push && npm run schema:public:push",
+    "schema:all:pull": "npm run schema:private:pull && npm run schema:public:pull",
+    "schema:seed:private": "prisma generate --schema=./prisma/schema-private.prisma && prisma db seed --schema=./prisma/schema-private.prisma -- private",
+    "schema:seed:getseeds": "prisma generate --schema=./prisma/schema-private.prisma && node --loader ts-node/esm prisma/getSeeds.mts --schema=./prisma/schema-private.prisma -- private",
+    "schema:seed:public": "prisma generate --schema=./prisma/schema-public.prisma && prisma db seed --schema=./prisma/schema-public.prisma -- public",
+    "schema:seed:all": "npm run schema:seed:private && npm run schema:seed:public",
     "dev": "next dev -p 3001",
-    "build": "next build",
-    "start:schema": "NEXUS_SCHEMA=true next start",
+    "build": "prisma generate --schema=./prisma/schema-private.prisma && prisma generate --schema=./prisma/schema-public.prisma && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "next lint && prettier --check --ignore-path .gitignore --ignore-path .prettierignore .",
     "format:fix": "next lint --fix && prettier --write --ignore-path .gitignore --ignore-path .prettierignore .",
     "prepare": "husky"
   },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.mts"
+  },
   "dependencies": {
-    "next": "^14.2.5",
-    "react": "18",
-    "react-dom": "18"
+    "@sentry/nextjs": "^7.112.2",
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "@babel/core": "7.23.7",
-    "@babel/eslint-parser": "7.23.3",
-    "@next-auth/mongodb-adapter": "1.1.3",
-    "@types/json-schema": "7.0.15",
-    "@types/node": "20",
+    "@babel/core": "^7.23.7",
+    "@babel/eslint-parser": "^7.23.3",
+    "@faker-js/faker": "^8.4.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@prisma/client": "^5.14.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.15.1",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^20",
     "@types/react": "18.3.2",
-    "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "6.19.0",
-    "eslint": "8",
-    "eslint-config-alloy": "5.1.2",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "eslint": "^8",
+    "eslint-config-alloy": "^5.1.2",
     "eslint-config-next": "14.0.4",
     "husky": "^9.0.11",
-    "lodash": "4.17.21",
-    "mongodb": "^5.9.2",
-    "next-auth": "4.24.5",
-    "nodemailer": "^6.9.14",
-    "prettier": "3.2.4",
-    "server-only": "0.0.1",
+    "lodash": "^4.17.21",
+    "mongodb": "^5.0.0",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.8",
+    "prettier": "^3.2.4",
+    "prisma": "^5.14.0",
     "socket.io": "4.7.5",
-    "typescript": "5",
-    "uuid": "9.0.1"
+    "server-only": "^0.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5",
+    "uuid": "^9.0.1"
   }
 }
