--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
 
 # vercel
@@ -38,7 +39,6 @@ next-env.d.ts
 # modules
 .gitmodules
 /modules/*
-mock/
 
 # private
 *.private
