ar(feat) DPCP-37: Prisma Accelerator

--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "schema:public:pull": "npx prisma db pull --schema prisma/schema-public.prisma",
     "schema:all:push": "npm run schema:private:push && npm run schema:public:push",
     "schema:all:pull": "npm run schema:private:pull && npm run schema:public:pull",
-    "schema:seed:private": "prisma generate --schema=./prisma/schema-private.prisma && prisma db seed --schema=./prisma/schema-private.prisma -- private",
-    "schema:seed:getseeds": "prisma generate --schema=./prisma/schema-private.prisma && node --loader ts-node/esm prisma/getSeeds.mts --schema=./prisma/schema-private.prisma -- private",
-    "schema:seed:public": "prisma generate --schema=./prisma/schema-public.prisma && prisma db seed --schema=./prisma/schema-public.prisma -- public",
+    "schema:seed:private": "npm run schema:generate:private && prisma db seed --schema=./prisma/schema-private.prisma -- private",
+    "schema:seed:getseeds": "npm run schema:generate:private && node --loader ts-node/esm prisma/getSeeds.mts --schema=./prisma/schema-private.prisma -- private",
+    "schema:seed:public": "npm run schema:generate:public && prisma db seed --schema=./prisma/schema-public.prisma -- public",
     "schema:seed:all": "npm run schema:seed:private && npm run schema:seed:public",
-    "dev": "next dev -p 3001",
-    "build": "prisma generate --schema=./prisma/schema-private.prisma && prisma generate --schema=./prisma/schema-public.prisma && next build",
+    "schema:generate:private": "npx prisma generate --no-engine --schema=./prisma/schema-private.prisma",
+    "schema:generate:public": "npx prisma generate --no-engine --schema=./prisma/schema-public.prisma",
+    "schema:generate:all": "npm run schema:generate:private && npm run schema:generate:public",
+    "dev": "npm run schema:generate:all && next dev -p 3001",
+    "build": " && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "next lint && prettier --check --ignore-path .gitignore --ignore-path .prettierignore .",
     "format:fix": "next lint --fix && prettier --write --ignore-path .gitignore --ignore-path .prettierignore .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "npm:wipe": "rm -rf node_modules && npm cache clean --force",
+    "npm:reset": "npm run npm:wipe && npm i"
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.mts"
@@ -37,6 +42,7 @@
     "@faker-js/faker": "^8.4.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.14.0",
+    "@prisma/extension-accelerate": "^1.1.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.16.2",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^20",
