--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["next/core-web-vitals", "alloy", "alloy/react", "alloy/typescript"]
+  "extends": ["next/core-web-vitals", "alloy", "alloy/react", "alloy/typescript"],
+  "env": {
+    "browser": true,
+    "amd": true,
+    "node": true
+  }
 }
