--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@dreampipcom/hypnos",
   "description": "DreamPip's Serverless Micro-services Hub.",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
   "author": "Angelo Reale",
   "license": "HPL3-ECO-AND-ANC",
   "scripts": {
-    "schema:private:push": "npx prisma db push --schema prisma/schema-private.prisma",
-    "schema:private:pull": "npx prisma db pull --schema prisma/schema-private.prisma",
-    "schema:public:push": "npx prisma db push --schema prisma/schema-public.prisma",
-    "schema:public:pull": "npx prisma db pull --schema prisma/schema-public.prisma",
-    "schema:all:push": "npm run schema:private:push && npm run schema:public:push",
-    "schema:all:pull": "npm run schema:private:pull && npm run schema:public:pull",
+    "schema:migrate:private": "npx prisma migrate dev --schema prisma/schema-private.prisma",
+    "schema:migrate:public": "npx prisma migrate dev --schema prisma/schema-public.prisma",
+    "schema:migrate:all": "npm run schema:migrate:private && npm run schema:migrate:public",
+    "schema:push:private": "npx prisma db push --schema prisma/schema-private.prisma",
+    "schema:pull:private": "npx prisma db pull --schema prisma/schema-private.prisma",
+    "schema:push:public": "npx prisma db push --schema prisma/schema-public.prisma",
+    "schema:pull:public": "npx prisma db pull --schema prisma/schema-public.prisma",
+    "schema:push:all": "npm run schema:push:private && npm run schema:push:public",
+    "schema:pull:all": "npm run schema:pull:private && npm run schema:pull:public",
     "schema:seed:private": "npm run schema:generate:private && prisma db seed --schema=./prisma/schema-private.prisma -- private",
     "schema:seed:getseeds": "npm run schema:generate:private && node --loader ts-node/esm prisma/getSeeds.mts --schema=./prisma/schema-private.prisma -- private",
     "schema:seed:public": "npm run schema:generate:public && prisma db seed --schema=./prisma/schema-public.prisma -- public",
@@ -37,10 +41,10 @@
     "next": "14.2.3"
   },
   "devDependencies": {
+    "@auth/prisma-adapter": "^1.6.0",
     "@babel/core": "^7.23.7",
     "@babel/eslint-parser": "^7.23.3",
     "@faker-js/faker": "^8.4.1",
-    "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.14.0",
     "@prisma/extension-accelerate": "^1.1.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.16.2",
@@ -55,8 +59,8 @@
     "husky": "^9.0.11",
     "lodash": "^4.17.21",
     "mongodb": "^5.0.0",
-    "next-auth": "^4.24.5",
-    "nodemailer": "^6.9.8",
+    "next-auth": "^5.0.0-beta.19",
+    "nodemailer": "^6.9.14",
     "prettier": "^3.2.4",
     "prisma": "^5.14.0",
     "server-only": "^0.0.1",
