--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "target": "ESNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -39,6 +39,7 @@
       "@constants": ["./lib/types/constants"],
       "@constants/*": ["./lib/types/constants/*"],
       "@auth": ["./lib/auth"],
+      "@auth/config": ["./lib/auth/config"],
       "@auth/adapter": ["./src/app/api/auth/[...nextauth]"],
       "@auth/adapter/*": ["./src/app/api/auth/[...nextauth]/*"],
       "@state/*": ["./lib/state/*"],
