--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "14.2.4"
   },
   "devDependencies": {
+    "@auth/express": "^0.6.0",
     "@auth/prisma-adapter": "^1.6.0",
     "@babel/core": "^7.23.7",
     "@babel/eslint-parser": "^7.23.3",
