--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react": "18.3.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "bson": "^6.8.0",
     "eslint": "^8",
     "eslint-config-alloy": "^5.1.2",
     "eslint-config-next": "14.0.4",
