--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
     "@types/react": "18.3.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@upstash/ratelimit": "^2.0.1",
+    "@vercel/edge": "^1.1.2",
+    "@vercel/functions": "^1.4.0",
+    "@vercel/kv": "^2.0.0",
     "bson": "^6.8.0",
     "eslint": "^8",
     "eslint-config-alloy": "^5.1.2",
