ar(fix) [DPCP-XX]: update packages

--- a/package.json
+++ b/package.json
@@ -42,38 +42,38 @@
     "next": "14.2.4"
   },
   "devDependencies": {
-    "@auth/prisma-adapter": "^1.6.0",
-    "@babel/core": "^7.23.7",
-    "@babel/eslint-parser": "^7.23.3",
-    "@faker-js/faker": "^8.4.1",
-    "@prisma/client": "^5.14.0",
-    "@prisma/extension-accelerate": "^1.1.0",
-    "@prisma/nextjs-monorepo-workaround-plugin": "^5.16.2",
-    "@types/json-schema": "^7.0.15",
-    "@types/node": "^20",
+    "@auth/prisma-adapter": "2.4.2",
+    "@babel/core": "7.23.7",
+    "@babel/eslint-parser": "7.23.3",
+    "@faker-js/faker": "8.4.1",
+    "@prisma/client": "5.14.0",
+    "@prisma/extension-accelerate": "1.1.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "5.16.2",
+    "@types/json-schema": "7.0.15",
+    "@types/node": "20",
     "@types/react": "18.3.2",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@upstash/ratelimit": "^2.0.1",
-    "@vercel/edge": "^1.1.2",
-    "@vercel/functions": "^1.4.0",
-    "@vercel/kv": "^2.0.0",
-    "bson": "^6.8.0",
-    "eslint": "^8",
-    "eslint-config-alloy": "^5.1.2",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@upstash/ratelimit": "2.0.1",
+    "@vercel/edge": "1.1.2",
+    "@vercel/functions": "1.4.0",
+    "@vercel/kv": "2.0.0",
+    "bson": "6.8.0",
+    "eslint": "8",
+    "eslint-config-alloy": "5.1.2",
     "eslint-config-next": "14.0.4",
-    "husky": "^9.0.11",
-    "lodash": "^4.17.21",
-    "mongodb": "^5.0.0",
-    "next-auth": "^5.0.0-beta.19",
-    "nodemailer": "^6.9.14",
+    "husky": "9.0.11",
+    "lodash": "4.17.21",
+    "mongodb": "5.0.0",
+    "next-auth": "5.0.0-beta.20",
+    "nodemailer": "6.9.14",
     "patch-package": "8.0.0",
-    "prettier": "^3.2.4",
-    "prisma": "^5.14.0",
-    "server-only": "^0.0.1",
+    "prettier": "3.2.4",
+    "prisma": "5.18.0",
+    "server-only": "0.0.1",
     "socket.io": "4.7.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "uuid": "^9.0.1"
+    "ts-node": "10.9.2",
+    "typescript": "5",
+    "uuid": "9.0.1"
   }
 }
