ar(feat) [DPTM-8] Dockerize and GCP

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "dev": "npm run schema:generate:all && next dev -p 3001",
     "build": "npm run schema:generate:all && next build",
     "start": "next start",
+    "start:pm2": "pm2 start npm --name 'hypnos' -- run start",
+    "start:vm": "HOSTNAME='0.0.0.0' node server.js",
+    "start:vm:pm2": "pm2 start npm --name 'hypnos' -- run start:vm",
     "lint": "next lint",
     "format": "next lint && prettier --check --ignore-path .gitignore --ignore-path .prettierignore .",
     "format:fix": "next lint --fix && prettier --write --ignore-path .gitignore --ignore-path .prettierignore .",
@@ -68,6 +71,7 @@
     "next-auth": "5.0.0-beta.20",
     "nodemailer": "6.9.14",
     "patch-package": "8.0.0",
+    "pm2": "^5.4.2",
     "prettier": "3.2.4",
     "prisma": "5.18.0",
     "server-only": "0.0.1",
