--- a/.github/workflows/deploy_gcp_prod.yaml
+++ b/.github/workflows/deploy_gcp_prod.yaml
@@ -79,6 +79,7 @@ jobs:
             MONGODB_USERS_DATABASE=${{ secrets.MONGODB_USERS_DATABASE_PROD }}
             NEXUS_KEEPALIVE=${{ secrets.NEXUS_KEEPALIVE_PROD }}
             NEXUS_MODE=${{ secrets.NEXUS_MODE_PROD }}
+            NEXUS_STANDALONE=true
             PRISMA_PRIVATE_URI=${{ secrets.PRISMA_PRIVATE_URI_PROD }}
             PRISMA_PUBLIC_URI=${{ secrets.PRISMA_PUBLIC_URI_PROD }}
        
