--- a/.env.local.public
+++ b/.env.local.public
@@ -32,6 +32,9 @@ NEXUS_MODE=
 # base path: server-only
 NEXUS_BASE_PATH=
 
+# for docker images only
+NEXUS_STANDALONE=
+
 # keep alive secret for private endpoints healthcheck
 NEXUS_KEEPALIVE=
 
