ar(feat) [DPTM-8] Dockerize and GCP

--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "schema:generate:private": "npx prisma generate --no-engine --schema=./prisma/schema-private.prisma",
     "schema:generate:public": "npx prisma generate --no-engine --schema=./prisma/schema-public.prisma",
     "schema:generate:all": "npm run schema:generate:private && npm run schema:generate:public",
+    "schema:generate:private:standalone": "npx prisma generate --schema=./prisma/schema-private.prisma",
+    "schema:generate:public:standalone": "npx prisma generate --schema=./prisma/schema-public.prisma",
+    "schema:generate:all:standalone": "npm run schema:generate:private && npm run schema:generate:public",
     "dev": "npm run schema:generate:all && next dev -p 3001",
     "build": "npm run schema:generate:all && next build",
+    "build:vm": "npm run schema:generate:all:standalone && next build",
     "start": "next start",
     "start:pm2": "pm2 start npm --name 'hypnos' -- run start",
     "start:vm": "HOSTNAME='0.0.0.0' node server.js",
