--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "prepare": "husky",
     "npm:wipe": "rm -rf node_modules && npm cache clean --force",
     "npm:reset": "npm run npm:wipe && npm i",
-    "postinstall": "patch-package && npm run schema:generate:all"
+    "postinstall": "node ./postInstall.js"
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.mts"
@@ -66,6 +66,7 @@
     "@vercel/functions": "1.4.0",
     "@vercel/kv": "2.0.0",
     "bson": "6.8.0",
+    "dotenv": "^16.4.5",
     "eslint": "8",
     "eslint-config-alloy": "5.1.2",
     "eslint-config-next": "14.0.4",
