ar(feat) [DPTM-8] Dockerize and GCP

--- a/.github/workflows/deploy_gcp_prod.yaml
+++ b/.github/workflows/deploy_gcp_prod.yaml
@@ -69,6 +69,7 @@ jobs:
             INSTAGRAM_CLIENT_SECRET=${{ secrets.INSTAGRAM_CLIENT_SECRET_PROD }}
             KV_REST_API_READ_ONLY_TOKEN=${{ secrets.KV_REST_API_READ_ONLY_TOKEN_PROD }}
             KV_REST_API_TOKEN=${{ secrets.KV_REST_API_TOKEN_PROD }}
+            KV_REST_API_URL=${{ secrets.KV_REST_API_URL }}
             KV_URL=${{ secrets.KV_URL_PROD }}
             MAIN_URL=${{ secrets.MAIN_URL_PROD }}
             MONGODB_DATABASE=${{ secrets.MONGODB_DATABASE_PROD }}
@@ -86,7 +87,7 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
 
