--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,38 @@ services:
     image: ghcr.io/dreampipcom/hypnos:latest
     ports:
       - 3001:3001
+  hypnos_local:
+    container_name: hypnos_local
+    build:
+      args:
+        - API_URL=${API_URL}
+        - APPLE_CLIENT_ID=${APPLE_CLIENT_ID}
+        - APPLE_CLIENT_SECRET=${APPLE_CLIENT_SECRET}
+        - AUTH_SECRET=${AUTH_SECRET}
+        - AUTH_TRUST_HOST=${AUTH_TRUST_HOST}
+        - AUTH_URL=${AUTH_URL}
+        - EMAIL_FROM=${EMAIL_FROM}
+        - EMAIL_SERVER=${EMAIL_SERVER}
+        - FACEBOOK_CLIENT_ID=${FACEBOOK_CLIENT_ID}
+        - FACEBOOK_CLIENT_SECRET=${FACEBOOK_CLIENT_SECRET}
+        - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+        - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+        - INSTAGRAM_CLIENT_ID=${INSTAGRAM_CLIENT_ID}
+        - INSTAGRAM_CLIENT_SECRET=${INSTAGRAM_CLIENT_SECRET}
+        - KV_REST_API_READ_ONLY_TOKEN=${KV_REST_API_READ_ONLY_TOKEN}
+        - KV_REST_API_TOKEN=${KV_REST_API_TOKEN}
+        - KV_URL=${KV_URL}
+        - MAIN_URL=${MAIN_URL}
+        - MONGODB_DATABASE=${MONGODB_DATABASE}
+        - MONGODB_DEFAULT_ORG=${MONGODB_DEFAULT_ORG}
+        - MONGODB_ORGS_DATABASE=${MONGODB_ORGS_DATABASE}
+        - MONGODB_PRIVATE_URI=${MONGODB_PRIVATE_URI}
+        - MONGODB_PUBLIC_URI=${MONGODB_PUBLIC_URI}
+        - MONGODB_USERS_DATABASE=${MONGODB_USERS_DATABASE}
+        - NEXUS_KEEPALIVE=${NEXUS_KEEPALIVE}
+        - NEXUS_MODE=${NEXUS_MODE}
+        - NEXUS_STANDALONE=${NEXUS_STANDALONE}
+        - PRISMA_PRIVATE_URI=${MONGODB_PRIVATE_URI}
+        - PRISMA_PUBLIC_URI=${MONGODB_PUBLIC_URI}
+    ports:
+      - 3001:3001
