--- a/.github/workflows/deploy_gcp_prod.yaml
+++ b/.github/workflows/deploy_gcp_prod.yaml
@@ -20,7 +20,7 @@ env:
 jobs:
   build-and-push-image:
     name: hypnos::build_and_push::docker_image
-    runs-on: ubuntu-latest
+    runs-on: macos-13
     permissions:
       contents: read
       packages: write
