ar(feat) [DPTM-8] Dockerize and GCP

--- a/.github/workflows/deploy_gcp_prod.yaml
+++ b/.github/workflows/deploy_gcp_prod.yaml
@@ -30,6 +30,12 @@ jobs:
     steps:
       - name: hypnos::deploy_prod::docker::Checkout repository
         uses: actions/checkout@v4
+
+      - name: hypnos::deploy_prod::docker::Setup docker (missing on MacOS)
+        if: runner.os == 'macos'
+        run: |
+          brew install docker
+          colima start
       
       - name: hypnos::deploy_prod::docker::Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
