ar(feat) [DPTM-8] Dockerize and GCP

--- a/.github/workflows/deploy_gcp_prod.yaml
+++ b/.github/workflows/deploy_gcp_prod.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: hypnos::deploy_prod::docker::Setup docker (missing on MacOS)
         if: runner.os == 'macos'
         run: |
-          brew install docker
+          brew install docker colima docker-buildx
           colima start
       
       - name: hypnos::deploy_prod::docker::Log in to the Container registry
