ar(feat) [DPTM-8] Dockerize and GCP

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "build": "npm run schema:generate:all && next build",
     "build:vm": "npm run schema:generate:all:standalone && next build",
     "start": "next start",
-    "start:pm2": "pm2 start npm --name 'hypnos' -- run start",
+    "start:pm2": "pm2-runtime start npm --name 'hypnos' -- run start",
     "start:vm": "HOSTNAME='0.0.0.0' node server.js",
-    "start:vm:pm2": "pm2 start npm --name 'hypnos' -- run start:vm",
+    "start:vm:pm2": "pm2-runtime start npm --name 'hypnos' -- run start:vm",
     "lint": "next lint",
     "format": "next lint && prettier --check --ignore-path .gitignore --ignore-path .prettierignore .",
     "format:fix": "next lint --fix && prettier --write --ignore-path .gitignore --ignore-path .prettierignore .",
