ar(feat) [DPTM-8] Dockerize and GCP

--- a/terraform/cloud-init.conf
+++ b/terraform/cloud-init.conf
@@ -19,6 +19,6 @@ write_files:
 
 runcmd:
 - docker login ghcr.io -u $DOCKER_USER -p $DOCKER_PASSWORD
-- docker pull ghcr.io/dreampipcom/hypnos:pr-41
+- docker pull ghcr.io/dreampipcom/hypnos:main
 - systemctl daemon-reload
 - systemctl start hypnos.service
