ar(feat) [DPTM-8] Dockerize and GCP

--- a/terraform/cloud-init.conf
+++ b/terraform/cloud-init.conf
@@ -13,7 +13,7 @@ write_files:
     Description=DreamPip: Hypnos
 
     [Service]
-    ExecStart=/usr/bin/docker run --restart unless-stopped -p 3001:3001 ghcr.io/dreampipcom/hypnos:main
+    ExecStart=/usr/bin/docker run --name hypnos --restart unless-stopped -p 3001:3001 ghcr.io/dreampipcom/hypnos:main
     ExecStop=/usr/bin/docker stop hypnos
     ExecStopPost=/usr/bin/docker rm hypnos
 
