--- a/package.json
+++ b/package.json
@@ -23,16 +23,23 @@
     "schema:generate:private": "npx prisma generate --no-engine --schema=./prisma/schema-private.prisma",
     "schema:generate:public": "npx prisma generate --no-engine --schema=./prisma/schema-public.prisma",
     "schema:generate:all": "npm run schema:generate:private && npm run schema:generate:public",
+    "schema:generate:private:standalone": "npx prisma generate --schema=./prisma/schema-private.prisma",
+    "schema:generate:public:standalone": "npx prisma generate --schema=./prisma/schema-public.prisma",
+    "schema:generate:all:standalone": "npm run schema:generate:private:standalone && npm run schema:generate:public:standalone",
     "dev": "npm run schema:generate:all && next dev -p 3001",
     "build": "npm run schema:generate:all && next build",
+    "build:vm": "npm run schema:generate:all:standalone && next build",
     "start": "next start",
+    "start:pm2": "pm2 list && pm2-docker start pm2.json",
+    "start:vm": "HOSTNAME='0.0.0.0' node server.js",
+    "start:vm:pm2": "pm2 list && pm2-docker start pm2-vm.json",
     "lint": "next lint",
     "format": "next lint && prettier --check --ignore-path .gitignore --ignore-path .prettierignore .",
     "format:fix": "next lint --fix && prettier --write --ignore-path .gitignore --ignore-path .prettierignore .",
     "prepare": "husky",
     "npm:wipe": "rm -rf node_modules && npm cache clean --force",
     "npm:reset": "npm run npm:wipe && npm i",
-    "postinstall": "patch-package && npm run schema:generate:all"
+    "postinstall": "node ./postInstall.js"
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.mts"
@@ -59,6 +66,7 @@
     "@vercel/functions": "1.4.0",
     "@vercel/kv": "2.0.0",
     "bson": "6.8.0",
+    "dotenv": "^16.4.5",
     "eslint": "8",
     "eslint-config-alloy": "5.1.2",
     "eslint-config-next": "14.0.4",
@@ -68,6 +76,7 @@
     "next-auth": "5.0.0-beta.20",
     "nodemailer": "6.9.14",
     "patch-package": "8.0.0",
+    "pm2": "^5.4.2",
     "prettier": "3.2.4",
     "prisma": "5.18.0",
     "server-only": "0.0.1",
