--- a/.github/workflows/deploy_gcp_prod.yaml
+++ b/.github/workflows/deploy_gcp_prod.yaml
@@ -59,8 +59,8 @@ jobs:
             AUTH_SECRET=${{ secrets.AUTH_SECRET_PROD }}
             AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST_PROD }}
             AUTH_URL=${{ secrets.AUTH_URL_PROD }}
-            GITHUB_ID=${{ secrets.AUTH_GITHUB_ID_PROD }}
-            GITHUB_SECRET=${{ secrets.AUTH_GITHUB_SECRET_PROD }}
+            AUTH_GITHUB_ID=${{ secrets.AUTH_GITHUB_ID_PROD }}
+            AUTH_GITHUB_SECRET=${{ secrets.AUTH_GITHUB_SECRET_PROD }}
             EMAIL_FROM=${{ secrets.EMAIL_FROM_PROD }}
             EMAIL_SERVER=${{ secrets.EMAIL_SERVER_PROD }}
             FACEBOOK_CLIENT_ID=${{ secrets.FACEBOOK_CLIENT_ID_PROD }}
