ar(feat) [DPCP-40]: Parse Services.

--- a/.env.local.public
+++ b/.env.local.public
@@ -34,6 +34,7 @@ NEXUS_BASE_PATH=
 
 # for docker images only
 NEXUS_STANDALONE=
+NEXUS_STANDALONE_PRISMA_ONLY=
 
 # keep alive secret for private endpoints healthcheck
 NEXUS_KEEPALIVE=
