--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "schema:generate:public:standalone": "npx prisma generate --schema=./prisma/schema-public.prisma",
     "schema:generate:all:standalone": "npm run schema:generate:private:standalone && npm run schema:generate:public:standalone",
     "dev": "npm run schema:generate:all && next dev -p 3001",
+    "dev:vm": "npm run schema:generate:all:standalone && next dev -p 3001",
     "build": "npm run schema:generate:all && next build",
     "build:vm": "npm run schema:generate:all:standalone && next build",
     "start": "next start",
