--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "schema:pull:public": "npx prisma db pull --schema prisma/schema-public.prisma",
     "schema:push:all": "npm run schema:push:private && npm run schema:push:public",
     "schema:pull:all": "npm run schema:pull:private && npm run schema:pull:public",
-    "schema:seed:private": "npm run schema:generate:private && prisma db seed --schema=./prisma/schema-private.prisma -- private",
-    "schema:seed:getseeds": "npm run schema:generate:private && node --loader ts-node/esm prisma/getSeeds.mts --schema=./prisma/schema-private.prisma -- private",
-    "schema:seed:public": "npm run schema:generate:public && prisma db seed --schema=./prisma/schema-public.prisma -- public",
-    "schema:seed:all": "npm run schema:seed:private && npm run schema:seed:public",
+    "schema:seed:private": "NEXUS_STANDALONE=true npm run schema:generate:private:standalone && prisma db seed --schema=./prisma/schema-private.prisma -- private",
+    "schema:seed:getseeds": "NEXUS_STANDALONE=true npm run schema:generate:private:standalone && node --loader ts-node/esm prisma/getSeeds.mts --schema=./prisma/schema-private.prisma -- private",
+    "schema:seed:public": "NEXUS_STANDALONE=true npm run schema:generate:private:standalone && npm run schema:generate:public:standalone && prisma db seed --schema=./prisma/schema-public.prisma -- public",
+    "schema:seed:mock": "NEXUS_STANDALONE=true npm run schema:generate:private:standalone && npm run schema:generate:public:standalone && prisma db seed --schema=./prisma/schema-public.prisma -- mock",
+    "schema:seed:all": "NEXUS_STANDALONE=true npm run schema:seed:private && npm run schema:seed:public",
     "schema:generate:private": "npx prisma generate --no-engine --schema=./prisma/schema-private.prisma",
     "schema:generate:public": "npx prisma generate --no-engine --schema=./prisma/schema-public.prisma",
     "schema:generate:all": "npm run schema:generate:private && npm run schema:generate:public",
@@ -27,6 +28,7 @@
     "schema:generate:public:standalone": "npx prisma generate --schema=./prisma/schema-public.prisma",
     "schema:generate:all:standalone": "npm run schema:generate:private:standalone && npm run schema:generate:public:standalone",
     "dev": "npm run schema:generate:all && next dev -p 3001",
+    "dev:vm": "npm run schema:generate:all:standalone && next dev -p 3001",
     "build": "npm run schema:generate:all && next build",
     "build:vm": "npm run schema:generate:all:standalone && next build",
     "start": "next start",
